@@ -1,25 +1,21 @@
 package com.gymmanagement.gym_app.service.serviceImpl;
 
 import com.gymmanagement.gym_app.domain.GymMember;
-import com.gymmanagement.gym_app.domain.MembershipRecord;
 import com.gymmanagement.gym_app.domain.Payment;
-import com.gymmanagement.gym_app.domain.enums.PaymentStatus;
-import com.gymmanagement.gym_app.exception.ResourceNotFoundException;
+import com.gymmanagement.gym_app.domain.Promotion;
+import com.gymmanagement.gym_app.dto.request.PaymentRequestDTO;
+import com.gymmanagement.gym_app.dto.response.PaymentResponseDTO;
 import com.gymmanagement.gym_app.mapper.PaymentMapper;
-import com.gymmanagement.gym_app.model.PaymentModel;
 import com.gymmanagement.gym_app.repository.GymMemberRepository;
 import com.gymmanagement.gym_app.repository.PaymentRepository;
+import com.gymmanagement.gym_app.repository.PromotionRepository;
 import com.gymmanagement.gym_app.service.PaymentService;
-import com.gymmanagement.gym_app.validation.PaymentValidator;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.math.BigDecimal;
-import java.time.LocalDate;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -28,79 +24,59 @@ public class PaymentServiceImpl implements PaymentService {
 
     private final PaymentRepository paymentRepository;
     private final GymMemberRepository gymMemberRepository;
+    private final PromotionRepository promotionRepository;
     private final PaymentMapper paymentMapper;
 
     @Override
-    public PaymentModel createPayment(PaymentModel paymentModel) {
-        GymMember gymMember = gymMemberRepository.findById(paymentModel.getGymMemberId())
-                .orElseThrow(() -> new ResourceNotFoundException("GymMember not found with ID: " + paymentModel.getGymMemberId()));
-
-        List<Payment> payments = paymentRepository.findByGymMember(gymMember);
-
-        PaymentValidator.validatePayment(gymMember, new BigDecimal(String.valueOf(paymentModel.getAmount())), payments);
-
-        Payment payment = paymentMapper.toEntity(paymentModel);
+    public PaymentResponseDTO createPayment(PaymentRequestDTO requestDTO) {
+        GymMember gymMember = gymMemberRepository.findById(requestDTO.getMemberId())
+                .orElseThrow(() -> new RuntimeException("GymMember not found"));
+        Payment payment = paymentMapper.fromRequestDTO(requestDTO);
         payment.setGymMember(gymMember);
-        payment.setPaymentDate(LocalDate.now());
-
-        payment = paymentRepository.save(payment);
-        payments.add(payment);
-
-        BigDecimal totalPaid = payments.stream()
-                .map(p -> new BigDecimal(String.valueOf(p.getAmount())))
-                .reduce(BigDecimal.ZERO, BigDecimal::add);
-
-        BigDecimal membershipCost = gymMember.getMembershipPlan().getCost();
-
-        if (totalPaid.compareTo(membershipCost) >= 0) {
-            payment.setStatus(PaymentStatus.COMPLETADO);
-            paymentRepository.save(payment);
-
-            // Actualizar los registros de membresía activos
-            for (MembershipRecord record : gymMember.getMembershipRecords()) {
-                if (record.isActive() && record.getCancellationDate() == null) {
-                    record.setCancellationDate(payment.getPaymentDate());
-                    record.setActive(false);
-                }
-            }
+        if(requestDTO.getPromotionId() != null) {
+            Promotion promotion = promotionRepository.findById(requestDTO.getPromotionId())
+                    .orElseThrow(() -> new RuntimeException("Promotion not found"));
+            payment.setPromotion(promotion);
         }
-
-        return paymentMapper.toModel(payment);
+        payment = paymentRepository.save(payment);
+        return paymentMapper.toResponseDTO(payment);
     }
 
-
     @Override
-    public PaymentModel getPaymentById(UUID id) {
+    public PaymentResponseDTO getPaymentById(UUID id) {
         Payment payment = paymentRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Payment not found with ID: " + id));
-        return paymentMapper.toModel(payment);
+                .orElseThrow(() -> new RuntimeException("Payment not found"));
+        return paymentMapper.toResponseDTO(payment);
     }
 
     @Override
-    public List<PaymentModel> getAllPayments() {
+    public List<PaymentResponseDTO> getAllPayments() {
         return paymentRepository.findAll().stream()
-                .map(paymentMapper::toModel)
-                .collect(Collectors.toList());
+                .map(paymentMapper::toResponseDTO)
+                .toList();
     }
 
     @Override
-    public PaymentModel updatePayment(UUID id, PaymentModel paymentModel) {
-        Payment existingPayment = paymentRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Payment not found with ID: " + id));
-
-        existingPayment.setAmount(paymentModel.getAmount());
-        existingPayment.setPaymentDate(paymentModel.getPaymentDate());
-        existingPayment.setPaymentMethod(paymentModel.getPaymentMethod());
-        existingPayment.setStatus(paymentModel.getStatus());
-
-        existingPayment = paymentRepository.save(existingPayment);
-        return paymentMapper.toModel(existingPayment);
+    public PaymentResponseDTO updatePayment(UUID id, PaymentRequestDTO requestDTO) {
+        Payment payment = paymentRepository.findById(id)
+                .orElseThrow(() -> new RuntimeException("Payment not found"));
+        payment.setAmount(requestDTO.getAmount());
+        payment.setPaymentDate(requestDTO.getPaymentDate());
+        payment.setPaymentMethod(requestDTO.getMethod());
+        payment.setStatus(requestDTO.getStatus());
+        if(requestDTO.getPromotionId() != null) {
+            Promotion promotion = promotionRepository.findById(requestDTO.getPromotionId())
+                    .orElseThrow(() -> new RuntimeException("Promotion not found"));
+            payment.setPromotion(promotion);
+        } else {
+            payment.setPromotion(null);
+        }
+        payment = paymentRepository.save(payment);
+        return paymentMapper.toResponseDTO(payment);
     }
 
     @Override
     public void deletePayment(UUID id) {
-        Payment payment = paymentRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Payment not found with ID: " + id));
-        paymentRepository.delete(payment);
+        paymentRepository.deleteById(id);
     }
 }
